--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Cloopen</title>
     <script src="js/resize.js"></script>
     <script src="js/jq1.9.js"></script>
     <script src="js/Slide.js"></script>
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="css/aboutmin.css">
     <link rel="stylesheet" href="css/headfootmin.css">
     <![endif]-->
-
     <script>
         $(document).ready(function(){
             setTimeout(function(){
