--- a/three.html
+++ b/three.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Cloopen</title>
     <script src="js/resize.js"></script>
     <script src="js/jq1.9.js"></script>
     <script src="js/Slide.js"></script>
